# Genesis-Code-Protocol

./: .dockerignore  .flake8  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .markdownlint.jsonc  .markdownlint.yml  .markdownlintignore  .pre-commit-config.yaml  AI Critical Analysis of GRCP.md  About.md  CHANGELOG.md  CITATION.cff  Cargo.toml  Charts.md  Code of Conduct.md  Contributing.md  DEPENDENCY_REVIEW_FIX.md  Dockerfile  EXIT_WIZARD.txt  GCP Current Version(45.6D).md  GCP Current Version(46).md  GCP Current Version(48). AI-Native Operational Manual.md  GCP Current Version(49 Flagship Edition). AI-Native Operational Manual.md  GCP Current Version(49). AI-Native Operational Manual.md  GCP Current Version(V50 Flagship Edition).md  GCP FULL PROTOCOL.md  GRCP FULL PROTOCOL.md  LICENSE.md  Makefile  PR_README.md  README-rust.md  README.md  RUST_IMPLEMENTATION.md  Requirements.txt  Roadmap.md  SECURITY.md  Setup.py  Table Of Contents.md  (+14 more)
.devcontainer/: devcontainer.json
.github/: .markdownlint.jsonc  CODEOWNERS  dependabot.yml  dependency-review-config.yml  pull_request_template.md  release-drafter.yml
CLI Bundle/: Readme.md  audit_utils.py  full_run.py  gcp_cli.py  phase1.py  phase6.py  prompt_utils.py  requirements.txt
CLI_Bundle/: Readme.md  gcp_cli.py  phase6.py  prompt_utils.py
Documents/: A Documents Readme.md  A NinjaAI Repo Analysis.md  AI Claude Critical Analysis GCP V45.6d  AI Claude Critical Analysis GCP V45.6d.md  AI Claude Critical Analysis GCP V46  AI Grok Critical Analysis Flagship GCPV49.md  AI Grok Critical Analysis GCP V46   Feature Requests.md  Issue Template.md  Pull Request Template.md  Requirements.md  Security.md  Setup.py  index.md  releases.md
GCP Example Output Inventions/: AlloyScript.ipynb  AlloyScript.py  Perceptual Loss Compression.py
GCP Iterative Versions/: Changelog.md
GCP Runners/: A V49.0 Master Runners Codex: Flagship Edition.md  Agriculture & Environmental MVR Runner.md  Archaeology_History Runner.md  Code Runner.md  Culinary Cartridge.md  Cybersecurity Runner.md  Deep Sea Runner.md  Education Runner.md  Energy_Power Runner.md  Entertainment Cartridge.md  Exotics Runner.md  Finance & FinTech Runner.md  Humanitarian_Disaster Relief Cartridge.md  Infrastructure Runner.md  Legal Cartridge.md  Life Sciences Runner.md  Physical Runner.md  Political Systems Runner.md  Public Programs_Policy Runner.md  Spaceflight_Aerospace Runner.md  Sports_Athletics Cartridge.md  Sports_Athletics Runner.md  Theology Runner.md  V49.0 Agriculture & Environmental MVR Runner.md  V49.0 Code Runner.md  V49.0 Finance & FinTech Runner.md  V49.0 Industrial & Utilities OT Runner.md  V49.0 Life Sciences Runner.md  V49.0 Master Runner.md  V49.0 Mobility & Autonomy Runner.md  V49.0 Physical Runner  V49.0 Physical Runner.md  V49.0 Theory Runner
GCP-All-Variants/: Changelog_P2.md  V11.md  V23.md  V34.md  V36.md  V40.md  V41.md  V42.md  V43.0.md  V43.6.md  V43.7.md  V44.9b.md  V45.0.md  V45.2.md  V45.3.md  V45.6.md  V46.5.md  V47.2.md  V48.0.md
GRCP most recent variants/: Changelog.md  Complete Master List All Revisions Full.md  GCP V43.md  GCP v42  GCP_v43_5_FULL.md  GCP_v43_6_Symbolic_Neutral_Full.md  V09.md  V11.md  V12.md  V20.md  V22.md  V23.md  V30.md  V33.md  V34.md  V35.md  V36.md  V38.md  V39.md  V40.md  V41.md  V42.md  V43.7.md  V43.md  V44.1.md  V44.7.md  V44.8.md  V44.9D.md  V44.9b.md  V44.9d.md  V45.1.md  V45.2.md  V45.3.md  V45.4A.md  V45.5.md  V45.6.md  V45.md  V47.0.md  V47.1.md
Notebooks/:  A Complete Full runs_ Full Inventions Master List(no order).md  A Example Explanation.md  Alloyscript V12   Alloyscript V12.py  Alloyscript.py  Audio Processing.md  (+4 more)
Notebooks/Modulift Unzipped Output/: CMakeLists.txt  README_MODULIFT_v0.1.md  REFERENCES.md  S48_-0.5A_CK_Drift.md  S48_-0.8_TRIZ_Contradictions.md  S48_-1_WorthIt_Report.md  S48_10.0_Simplicity_Audit.md  S48_10.5_Optimization_Ledger.md  S48_1_Context_Dossier.md  S48_2_Influence_Matrix.md  S48_3_Design_Envelope.md  S48_4_BranchTree.md  S48_5_Architecture_Blueprint.md  S48_6_FunctionalPlan.md  S48_8.9_RedTeam_Findings.md  S48_9_Validation_Template.md  bench_build.ps1  bench_build.sh  enable-named-modules.cmake  headers.cmake  hu-clang-gcc.cmake  hu-msvc.cmake  lib.cpp  main.cpp  math.hpp  modulift-bench.yml  modulift_explain.py  modulift_explain_rules.json  util.hpp
(+198 files in other folders)
