[package]
name = "genesis-code-protocol-rs"
version = "0.1.0"
edition = "2021"
authors = ["Genesis Code Protocol Team <contact@example.com>"]
description = "Rust implementation of the Genesis Code Protocol (GCP) framework"
documentation = "https://docs.rs/genesis-code-protocol-rs"
homepage = "https://github.com/lazyxeon/Genesis-Code-Protocol"
repository = "https://github.com/lazyxeon/Genesis-Code-Protocol"
license = "MIT"
keywords = ["protocol", "ai", "framework", "automation", "workflow"]
categories = ["development-tools", "science"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1.4"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["async"]
async = ["tokio"]

[[bench]]
name = "protocol_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = true
