[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  "Notebooks",
  "Documents",
  "docs",
  "GCP-All-Variants",
  "GCP Runners",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806", "S101"]
"scripts/*" = ["N802", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"